--- a/feed.css
+++ b/feed.css
@@ -11,7 +11,7 @@ body {
     padding: 0;
     font-family: 'droid sans',helvetica,arial,sans;
     background-color: black;
-    font-size:1.5em;
+    font-size:1em;
 }
 
 a {
@@ -49,19 +49,14 @@ a:hover {
 }
 
 #navlist {
-display: inline;
-}
-
-
-#navlist li{
-display: inline;
-}
-
-#feeds {
-height:80%; overflow: auto;
+  position: fixed;
+  bottom:0;
+  height:20%;
+  overflow:auto;
+  background-color:black;
+  right:0;
 }
 
 button {
-width:100%;
-min-height: 10%;
+
 }
